# beyond_SteamDeck

./: setup.sh
configs/: florence.conf  steam_deck_config.yaml
configs/rviz/: lidar_config.rviz  realsense_config.rviz
desktop_apps/: florence.desktop  lidar.desktop  movement.desktop  realsense.desktop
shell_scripts/desktop_part/: florence.sh  leo_lidar.sh  leo_movement.sh  leo_realsense.sh  talos_movement.sh  talos_realsense.sh
shell_scripts/ros_part/: joy_teleop.sh  rviz.sh
src/talos_teleop/: CMakeLists.txt  install_dependencies.sh  package.xml
src/talos_teleop/config/: joy_config.yaml
talos_teleop/: install_dependencies.sh  package.xml
talos_teleop/launch/: joy_teleop.launch
